[filesyncserver] use a lightweight framework